fix: remove incorrect letter spacing rule

--- a/packages/cdc-react/src/scss/global.scss
+++ b/packages/cdc-react/src/scss/global.scss
@@ -9,7 +9,6 @@ body {
   font-size: 17px;
   box-sizing: border-box;
   font-family: "Open Sans-Regular", Helvetica;
-  letter-spacing: 0.1rem;
   font-weight: 520;
 }
 
